load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k8s.io/test-infra/prow/external-plugins/experiment",
    visibility = ["//visibility:public"],
    deps = ["@com_github_google_go_github//v28/github:go_default_library"],
)
