load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["git_utils.go"],
    importpath = "k8s.io/test-infra/prow/external-plugins/experiment/pkg/git_utils",
    visibility = ["//visibility:public"],
    deps = ["@com_github_sirupsen_logrus//:go_default_library"],
)
